dhall/tests/type-errors/unit/MergeHandlerNotInUnion.txt
Type error: error: Merge2ArgMustBeUnionOrOptional
 --> <current file>:1:0
  |
1 | merge { x = λ(_ : Bool) → _ } <> : Bool
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Merge2ArgMustBeUnionOrOptional
  |
